remove expose return github sha as version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
           environment_name: Dockerfrontendweb-env
           existing_bucket_name: elasticbeanstalk-us-east-1-917396685926
           region: us-east-1
-          version_label: 1
+          version_label: ${{ github.sha }}
           deployment_package: deploy.zip
