--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,15 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t saulomarchi/docker-frontend-web-test -f Dockerfile.dev .
-      - run: docker run -e CI=true saulomarchi/docker-frontend-web-test npm test
  
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
  
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
+        uses: einaregilsson/beanstalk-deploy@v21
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
@@ -25,5 +22,5 @@ jobs:
           environment_name: Dockerfrontendweb-env
           existing_bucket_name: elasticbeanstalk-us-east-1-917396685926
           region: us-east-1
-          version_label: ${{ github.sha }}
+          version_label: ${{ github.SHA }}
           deployment_package: deploy.zip
