--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - run: docker build -t saulomarchi/docker-frontend-web-test -f Dockerfile.dev .
+      - run: docker run -e CI=true saulomarchi/docker-frontend-web-test npm test
  
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
